--- a/kitty.conf
+++ b/kitty.conf
@@ -1,12 +1,12 @@
-#    __ ___ __  __      
+#    __ ___ __  __
 #   / //_(_) /_/ /___ __
 #  / ,< / / __/ __/ // /
-# /_/|_/_/\__/\__/\_, / 
-#                /___/  
+# /_/|_/_/\__/\__/\_, /
+#                /___/
 #
 # Configuration
 font_family                 JetBrainsMono Nerd Font
-font_size	                12
+font_size                   12
 bold_font                   auto
 italic_font                 auto
 bold_italic_font            auto
@@ -26,9 +26,14 @@ confirm_os_window_close     0
 selection_foreground        none
 selection_background        none
 
-# Include pywal colors
-include $HOME/.cache/wal/colors-kitty.conf
+# Animated cursor follows text
+include $HOME/.config/ml4w/settings/kitty-cursor-trail.conf
+
+# Include matugen colors
+allow_remote_control yes
+include colors.conf
 
 # Include Custom Configuration
 # Create the file custom.conf in ~/.config/kitty to overwrite the default configuration
 include ./custom.conf
+
