--- a/colors.conf
+++ b/colors.conf
@@ -1,14 +1,14 @@
-cursor #dde4e3
-cursor_text_color #bec9c8
+cursor #e4e1e9
+cursor_text_color #c7c5d0
 
-foreground            #dde4e3
-background            #0e1514
-selection_foreground  #1b3534
-selection_background  #b0cccb
-url_color             #80d5d3
+foreground            #e4e1e9
+background            #131318
+selection_foreground  #2e2f42
+selection_background  #c5c4dd
+url_color             #c0c1ff
 
 # black
-color8   #dde4e3
+color8   #e4e1e9
 color0   #4c4c4c
 
 # red
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #80d5d3
+color4  #c0c1ff
 color12 #a39ec4
 
 # magenta
